# Python-for-Data-Science-42

Python-0-Starting/: Python - 0 - evalsheet.html
Python-0-Starting/ex00/: Hello.py
Python-0-Starting/ex01/: format_ft_time.py
Python-0-Starting/ex02/: find_ft_type.py
Python-0-Starting/ex03/: NULL_not_found.py  test.py
Python-0-Starting/ex04/: whatis.py
Python-0-Starting/ex05/: building.py
Python-0-Starting/ex06/: filterstring.py  ft_filter.py  tester.py
Python-0-Starting/ex07/: sos.py
Python-0-Starting/ex08/: Loading.py  tester.py
Python-0-Starting/ex09/ft_package/: LICENSE  README.md  pyproject.toml  setup.cfg
Python-0-Starting/ex09/ft_package/ft_package.egg-info/: PKG-INFO
Python-1-Array/ex00/: give_bmi.py
Python-1-Array/ex01/: array2D.py
Python-1-Array/ex02/: load_image.py
Python-1-Array/ex03/: load_image.py  zoom.py
Python-3-OOP /ex00/: S1E9.py
